syntax = "proto3";
import "commontype/QoS.proto";
import "commontype/TopicMessage.proto";

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.dist.rpc.proto";
option java_outer_classname = "DistServiceProtos";

package distservice;

service DistService {
  rpc match (MatchRequest) returns (MatchReply);
  rpc unmatch (UnmatchRequest) returns (UnmatchReply);
  rpc dist (stream DistRequest) returns (stream DistReply);
}

message MatchRequest {
  uint64 reqId = 1;
  string tenantId = 2;
  string inboxId = 3; // the inbox id defined in calling sub broker service identified by CN field of client cert
  string topicFilter = 4;
  commontype.QoS subQoS = 5;
  uint32 broker = 6;
  string delivererKey = 7;
}

message MatchReply {
  enum Result {
    OK = 0;
    EXCEED_LIMIT = 1;
    ERROR = 2;
  }
  uint64 reqId = 1;
  Result result = 2;
}

message UnmatchRequest {
  uint64 reqId = 1;
  string tenantId = 2;
  string inboxId = 3; // the inbox id defined in calling sub broker service identified by CN field of client cert
  string topicFilter = 4;
  uint32 broker = 5;
  string delivererKey = 6;
}

message UnmatchReply {
  enum Result {
    OK = 0;
    ERROR = 1;
  }
  uint64 reqId = 1;
  Result result = 2;
}

message DistRequest {
  uint64 reqId = 1;
  repeated commontype.PublisherMessagePack messages = 2;
}

message DistReply {
  enum Code{
    OK = 0;
    NO_MATCH = 1;
    EXCEED_LIMIT = 2;
    ERROR = 3;
  }
  message Result{
    map<string, Code> topic = 1;
  }
  uint64 reqId = 1;
  repeated Result results = 2;
}